@@ -46,4 +46,9 @@ void genius_unsetup_window_cursor (GtkWidget *win);
 gboolean genius_ask_question (GtkWidget *parent, const char *question);
 void genius_display_error (GtkWidget *parent, const char *err);
 
+/* same as GNOME */
+#define GENIUS_PAD          8
+#define GENIUS_PAD_SMALL    4
+#define GENIUS_PAD_BIG      12
+
 #endif /* GNOME_GENIUS_H_ */
