@@ -1,3 +1,8 @@
+Fri Feb 13 13:59:11 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c, src/graphing.c, src/gnome-genius.h src/genius.c:
+	  some more delibgnome(ui)ification
+
 Fri Feb 13 13:29:35 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* ve/ve-misc.c, ve/ve-misc.h, ve/ve-gnome.c, ve/ve-nongnome.c,
